--- a/src/main/resources/templates/student/student_form.html
+++ b/src/main/resources/templates/student/student_form.html
@@ -98,12 +98,12 @@
 
                         <div style="width: 100%">
                             <label class="radio-inline">
-                                <input th:field="*{student.gender}" type="radio" value="m"
+                                <input th:field="*{student.gender}" type="radio" value="1"
                                        name="gender" required data-msg-required="性别必选">
                                 男性
                             </label>
                             <label class="radio-inline">
-                                <input th:field="*{student.gender}" type="radio" value="f"
+                                <input th:field="*{student.gender}" type="radio" value="0"
                                        name="gender">
                                 女性
                             </label>
