--- a/src/main/resources/templates/student/student_list.html
+++ b/src/main/resources/templates/student/student_list.html
@@ -12,7 +12,7 @@
             <div class="btn-group dataTables-row-operator">
                 <a title="编辑" data-pjax=""  href="{{editUrl}}" type="button"><i class="fa fa-edit"></i></a>
                 <a title="删除"  type="button" href="#" onclick="youke.studentList.delRow('{{id}}')" ><i class="fa fa-trash-o"></i></a>
-                <a title="指定角色"  type="button" href="#" onclick="youke.studentList.assignRolesModal('{{id}}','{{username}}')" ><i class="fa fa-user-o"></i></a>
+                <!--<a title="指定角色"  type="button" href="#" onclick="youke.studentList.assignRolesModal('{{id}}','{{username}}')" ><i class="fa fa-user-o"></i></a>-->
             </div>
         </script>
 
@@ -45,6 +45,12 @@
                 <!-- 查询、添加、刷新 -->
                 <div class="row-fluid">
                     <form class="form-inline" id="queryForm">
+                        <div class="form-group">
+                            <label>地区</label>
+                            <select id="area" class="form-control">
+                                <option value="">未选择</option>
+                            </select>
+                        </div>
                         <div class="form-group">
                             <label>高校</label>
                             <select id="universityId" class="form-control">
