--- a/src/main/resources/templates/student/student_list.html
+++ b/src/main/resources/templates/student/student_list.html
@@ -46,6 +46,14 @@
                 <div class="row-fluid">
                     <form class="form-inline" id="queryForm">
                         <div class="form-group">
+                            <label>地区</label>
+                            <select id="code" class="form-control">
+                                <option value="">未选择</option>
+                                <option value="10001">北京</option>
+                                <option value="10003">清华大学</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label>高校</label>
                             <select id="universityId" class="form-control">
                                 <option value="">未选择</option>
